tests/purs/failing/QuantificationCheckFailure2.out
Error found:
in module [33mMain[0m
at tests/purs/failing/QuantificationCheckFailure2.purs:6:13 - 6:30 (line 6, column 13 - line 6, column 30)

  Cannot unambiguously generalize kinds appearing in the elaborated type:

    [33mforall (a :: t8). Proxy @t8 a[0m

  where [33mt8[0m is an unknown kind.
  Try adding additional kind signatures or polymorphic kind variables.

in type constructor [33mP[0m

See https://github.com/purescript/documentation/blob/master/errors/QuantificationCheckFailureInType.md for more information,
or to contribute content related to this error.

